<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/write_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_title"
            android:inputType="textShortMessage"
            android:lineSpacingExtra="8sp"
            android:textColorHint="#72000000"
            android:textColor="#202121"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/write_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:onClick="onClick"
            android:paddingBottom="10dp"
            android:paddingRight="0dp"
            android:paddingLeft="21dp"
            android:paddingTop="10dp"
            android:text="@string/confirm"
            android:textColor="#979797"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#979797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <EditText
        android:id="@+id/write_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/please_detail"
        android:inputType="textLongMessage"
        android:lineSpacingExtra="11sp"
        android:paddingTop="16dp"
        android:textColorHint="#72000000"
        android:textColor="#202121"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</android.support.constraint.ConstraintLayout>